# t3

./: .gitignore  Cargo.toml  README.md
benches/: encode_benchmark.rs
migrations/: 20250505150450_object_metadata_table.sql  20250506155725_object_metadata_table.sql  20250506180917_bucket_metadata_table.sql  20250506182744_object_metadata_table.sql  20250506182852_object_metadata_table.sql  20250506185241_bucket_metadata_table.sql  20250506213131_bucket_metadata_table.sql  20250506213141_object_metadata_table.sql  20250509172846_object_metadata_table.sql
src/: db.rs  decode.rs  encode.rs  handler.rs  lib.rs  main.rs  server.rs
src/handler/: api.rs  bucket.rs  delete.rs  get.rs  post.rs
