[package]
name = "t3"
version = "0.1.0"
edition = "2024"

[dependencies]
reed-solomon-erasure = "6.0.0"
bytes = "1.10.1"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
axum={ version = "0.8.3", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
tokio-util = { version = "0.7.14", features = ["io"] }
mime_guess = "2.0.5"
tower-http = { version = "0.6.2", features = ["limit"] }
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }


[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
[[bench]]
name = "encode_benchmark"
harness = false
